--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'M'
 - !lcsh 'Songs, English'
 - !lcsh 'Ballads, English'
+- GITenberg
 title: 'Wit and Mirth: or Pills to Purge Melancholy, Vol. 5 of 6'
 url: http://www.gutenberg.org/ebooks/26679
